# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml  spec.yml
.github/workflows/: CI.yml  audit.yml  rust.yml
.sqlx/: query-56fac03187ecf6dc571088249b1ea28708ad47d3fb3fedb1d7ca204ca96b1d57.json
configuration/: production.yml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscribe.rs  subscriptions.rs
tests/: health_check.rs
